Whitespace fix

--- a/index.css
+++ b/index.css
@@ -25,7 +25,7 @@ p {
 .not-heading {
 	background: linear-gradient(to bottom, rgba(234,234,234,1) 0%,rgba(229,192,167,1) 75%); 
 	height: 100%;
-	padding-bottom: 150px;
+	padding-bottom: 300px;
 }
 
 .initials {
@@ -73,4 +73,5 @@ img {
 	padding-top: 30px;
 	color: #890039;
 	font-size:18px;
+	padding-bottom: 150px;
 }
